--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Study English Vocabulary</title>
+    <title>Easy to learn English</title>
     <link rel="icon" href="images/icon.jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
           integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
@@ -23,6 +23,10 @@
         height: 50px;
         border-radius: 50%;
     }
+    img{
+        width: 40%;
+        height: 40%;
+    }
 
     .container {
         width: 100%;
@@ -30,22 +34,39 @@
         margin: auto;
         text-align: center;
     }
+    .lever{
+        display: flex;
+        justify-content: center;
+    }
+    h3{
+        margin-right: 10px;
+    }
 </style>
 <body>
 <div class='container'>
     <img src="images/guess-back-ground.png"
          alt="images">
-    <h3>GUESS THE WORD BY IMAGES :
-        <a href="game-image.html">
-            <button><i class="fa-solid fa-play"></i></button>
-        </a>
+    <div class="lever">
+        <h3>LEVER 1 :
+            <a href="game-image.html">
+                <button><i class="fa-solid fa-play"></i></button>
+            </a>
 
-    </h3>
-    <h3>GUESS THE WORD BY QUESTIONS :
-        <a href="game-question.html">
-            <button><i class="fa-solid fa-play"></i></button>
-        </a>
-    </h3>
+        </h3>
+        <h3>LEVER 2 :
+            <a href="game-question.html">
+                <button><i class="fa-solid fa-play"></i></button>
+            </a>
+        </h3>
+    </div>
+    <div class="lever">
+        <h3>LEVER 3 :
+            <a href="/game-winner.html">
+                <button><i class="fa-solid fa-play"></i></button>
+            </a>
+        </h3>
+    </div>
+
 </div>
 
 
