--- a/game-question.html
+++ b/game-question.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Study English Vocabulary</title>
+    <title>Game Guess The Word by question</title>
+    <link rel="icon" href="images/icon.jpeg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
           integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -24,15 +25,17 @@
         background-position: center;
         background-size: cover;
         object-fit: cover;
-        width:100%;
+        width:50%;
         color: yellow;
+        text-align: center;
     }
     #message {
-        text-align: center;
+        display: flex;
+        justify-content: center;
     }
 
     #game-container {
-        width: 800px;
+        width: 70%;
         height: auto;
         margin: auto;
     }
@@ -43,18 +46,12 @@
         text-align: center;
         color: #f0f0f0;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         font-weight: bolder;
         font-size: xx-large;
 
     }
-    .title{
-        text-align: center;
-        padding-left: 250px;
-    }
     .hint {
-        text-align: center;
-        padding-right: 10px;
         color: yellow;
     }
 
@@ -69,16 +66,19 @@
     }
     #question {
         width: 100%;
-        height: 150px;
-        text-align: center;
+        height: 200px;
         background-color: #f0f0f0;
         border-radius: 8px;
         font-size: xx-large;
         margin-top: 20px;
+        border: 2px solid purple;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .image {
         width: auto;
-        height: 150px;
+        height: 200px;
         text-align: center;
         background-color: black;
         border-radius: 8px;
@@ -88,11 +88,17 @@
     img{
         width: 100%;
         height: 100%;
+        transition: transform 1s;
+    }
+    img:hover{
+        transform: scale(1.3);
     }
 
     #result {
         text-align: center;
         margin-top: 10px;
+        display: flex;
+        justify-content: center;
     }
 
     #result button {
@@ -102,6 +108,9 @@
     button {
         width: 60px;
         height: 40px;
+        border: 2px solid blue;
+        color: blue;
+        border-radius: 8px;
     }
 
     .char-input {
@@ -121,8 +130,10 @@
 <body>
 <div id="game-container">
     <div class='header'>
-        <div class ='title'>Guess the Word</div>
-        <div class="hint" onclick="showHint()"><i class="fa-regular fa-lightbulb"></i></div>
+        <div id="home"><i class="fa-solid fa-house"></i></div>
+        <div id="topic">Topic:</div>
+        <div class="hint" onclick="showHint()"><i class="fa-regular fa-lightbulb"></i> Hint</div>
+        <div id="score">Score: </div>
     </div>
     <div class='content'>
         <div class="main">
